TINY-14028: dark mode fixes

--- a/modules/oxide/src/less/theme/components/ai-preview/ai-previewloader.less
+++ b/modules/oxide/src/less/theme/components/ai-preview/ai-previewloader.less
@@ -11,6 +11,7 @@
     border-radius: var(--tox-private-panel-border-radius, @panel-border-radius);
     box-shadow: var(--tox-private-ai-preview-loader-box-shadow, 0 0 40px 1px fade(@color-black, 15%), 0 16px 16px -10px fade(@color-black, 15%));
     background-color: var(--tox-private-background-color, @background-color);
+    color: var(--tox-private-text-color, @text-color);
     pointer-events: auto;
 
     &__content {
